--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "import os\n",
     "\n",
     "# Import API key\n",
-    "from api_keys import g_key"
+    "from config import g_key"
    ]
   },
   {
@@ -41,11 +41,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed (mph)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>bengkulu</td>\n",
+       "      <td>-3.8004</td>\n",
+       "      <td>102.2655</td>\n",
+       "      <td>1649150.0</td>\n",
+       "      <td>83.66</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>6.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ushuaia</td>\n",
+       "      <td>-54.8000</td>\n",
+       "      <td>-68.3000</td>\n",
+       "      <td>3833367.0</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>9.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>ilulissat</td>\n",
+       "      <td>69.2167</td>\n",
+       "      <td>-51.1000</td>\n",
+       "      <td>3423146.0</td>\n",
+       "      <td>28.40</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>3.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>nowy dwor gdanski</td>\n",
+       "      <td>54.2131</td>\n",
+       "      <td>19.1177</td>\n",
+       "      <td>3090502.0</td>\n",
+       "      <td>40.42</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>16.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>tommot</td>\n",
+       "      <td>58.9564</td>\n",
+       "      <td>126.2925</td>\n",
+       "      <td>2015179.0</td>\n",
+       "      <td>32.43</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>15.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>airai</td>\n",
+       "      <td>-8.9266</td>\n",
+       "      <td>125.4092</td>\n",
+       "      <td>1651810.0</td>\n",
+       "      <td>69.35</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>1.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>vaini</td>\n",
+       "      <td>-21.2000</td>\n",
+       "      <td>-175.2000</td>\n",
+       "      <td>4032243.0</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>namibe</td>\n",
+       "      <td>-15.1961</td>\n",
+       "      <td>12.1522</td>\n",
+       "      <td>3347019.0</td>\n",
+       "      <td>80.35</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>1.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>mataura</td>\n",
+       "      <td>-46.1927</td>\n",
+       "      <td>168.8643</td>\n",
+       "      <td>6201424.0</td>\n",
+       "      <td>52.00</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>sharjah</td>\n",
+       "      <td>25.3573</td>\n",
+       "      <td>55.4033</td>\n",
+       "      <td>292672.0</td>\n",
+       "      <td>88.27</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0               City  Latitude  Longitude         ID  Temperature  \\\n",
+       "0           0           bengkulu   -3.8004   102.2655  1649150.0        83.66   \n",
+       "1           1            ushuaia  -54.8000   -68.3000  3833367.0        41.00   \n",
+       "2           2          ilulissat   69.2167   -51.1000  3423146.0        28.40   \n",
+       "3           3  nowy dwor gdanski   54.2131    19.1177  3090502.0        40.42   \n",
+       "4           4             tommot   58.9564   126.2925  2015179.0        32.43   \n",
+       "5           5              airai   -8.9266   125.4092  1651810.0        69.35   \n",
+       "6           6              vaini  -21.2000  -175.2000  4032243.0        78.80   \n",
+       "7           7             namibe  -15.1961    12.1522  3347019.0        80.35   \n",
+       "8           8            mataura  -46.1927   168.8643  6201424.0        52.00   \n",
+       "9           9            sharjah   25.3573    55.4033   292672.0        88.27   \n",
+       "\n",
+       "   Humidity  Cloudiness  Wind Speed (mph)  \n",
+       "0      64.0        49.0              6.98  \n",
+       "1      93.0        75.0              9.22  \n",
+       "2      69.0        17.0              3.44  \n",
+       "3      75.0        20.0             16.11  \n",
+       "4      82.0        90.0             15.64  \n",
+       "5      71.0        44.0              1.97  \n",
+       "6     100.0        40.0              2.30  \n",
+       "7      74.0        48.0              1.36  \n",
+       "8      94.0       100.0              3.00  \n",
+       "9      21.0         0.0              2.30  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "City_data= pd.read_csv(\"City_Data.csv\")\n",
+    "City_data.head(10)\n"
    ]
   },
   {
@@ -60,17 +249,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "locations= City_data[['Latitude', 'Longitude']]\n",
+    "humidity= City_data['Humidity'].astype(float)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      64.0\n",
+       "1      93.0\n",
+       "2      69.0\n",
+       "3      75.0\n",
+       "4      82.0\n",
+       "       ... \n",
+       "626    73.0\n",
+       "627    99.0\n",
+       "628    23.0\n",
+       "629    93.0\n",
+       "630    36.0\n",
+       "Name: Humidity, Length: 631, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "humidity"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,10 +299,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed (mph)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>bengkulu</td>\n",
+       "      <td>-3.8004</td>\n",
+       "      <td>102.2655</td>\n",
+       "      <td>1649150.0</td>\n",
+       "      <td>83.66</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>6.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ushuaia</td>\n",
+       "      <td>-54.8000</td>\n",
+       "      <td>-68.3000</td>\n",
+       "      <td>3833367.0</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>9.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>ilulissat</td>\n",
+       "      <td>69.2167</td>\n",
+       "      <td>-51.1000</td>\n",
+       "      <td>3423146.0</td>\n",
+       "      <td>28.40</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>3.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>nowy dwor gdanski</td>\n",
+       "      <td>54.2131</td>\n",
+       "      <td>19.1177</td>\n",
+       "      <td>3090502.0</td>\n",
+       "      <td>40.42</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>16.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>tommot</td>\n",
+       "      <td>58.9564</td>\n",
+       "      <td>126.2925</td>\n",
+       "      <td>2015179.0</td>\n",
+       "      <td>32.43</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>15.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>626</th>\n",
+       "      <td>626</td>\n",
+       "      <td>olinda</td>\n",
+       "      <td>-8.0089</td>\n",
+       "      <td>-34.8553</td>\n",
+       "      <td>3393536.0</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>2.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>627</th>\n",
+       "      <td>627</td>\n",
+       "      <td>staryy nadym</td>\n",
+       "      <td>65.6118</td>\n",
+       "      <td>72.6842</td>\n",
+       "      <td>1490918.0</td>\n",
+       "      <td>34.72</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>18.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628</th>\n",
+       "      <td>628</td>\n",
+       "      <td>yerofey pavlovich</td>\n",
+       "      <td>53.9667</td>\n",
+       "      <td>121.9667</td>\n",
+       "      <td>2012938.0</td>\n",
+       "      <td>39.78</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>8.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>629</th>\n",
+       "      <td>629</td>\n",
+       "      <td>carnoustie</td>\n",
+       "      <td>56.5014</td>\n",
+       "      <td>-2.7091</td>\n",
+       "      <td>2653704.0</td>\n",
+       "      <td>37.69</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630</th>\n",
+       "      <td>630</td>\n",
+       "      <td>pampierstad</td>\n",
+       "      <td>-27.7832</td>\n",
+       "      <td>24.6877</td>\n",
+       "      <td>966380.0</td>\n",
+       "      <td>64.62</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>3.29</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>583 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0               City  Latitude  Longitude         ID  \\\n",
+       "0             0           bengkulu   -3.8004   102.2655  1649150.0   \n",
+       "1             1            ushuaia  -54.8000   -68.3000  3833367.0   \n",
+       "2             2          ilulissat   69.2167   -51.1000  3423146.0   \n",
+       "3             3  nowy dwor gdanski   54.2131    19.1177  3090502.0   \n",
+       "4             4             tommot   58.9564   126.2925  2015179.0   \n",
+       "..          ...                ...       ...        ...        ...   \n",
+       "626         626             olinda   -8.0089   -34.8553  3393536.0   \n",
+       "627         627       staryy nadym   65.6118    72.6842  1490918.0   \n",
+       "628         628  yerofey pavlovich   53.9667   121.9667  2012938.0   \n",
+       "629         629         carnoustie   56.5014    -2.7091  2653704.0   \n",
+       "630         630        pampierstad  -27.7832    24.6877   966380.0   \n",
+       "\n",
+       "     Temperature  Humidity  Cloudiness  Wind Speed (mph)  \n",
+       "0          83.66      64.0        49.0              6.98  \n",
+       "1          41.00      93.0        75.0              9.22  \n",
+       "2          28.40      69.0        17.0              3.44  \n",
+       "3          40.42      75.0        20.0             16.11  \n",
+       "4          32.43      82.0        90.0             15.64  \n",
+       "..           ...       ...         ...               ...  \n",
+       "626        78.80      73.0        75.0              2.30  \n",
+       "627        34.72      99.0        73.0             18.05  \n",
+       "628        39.78      23.0        30.0              8.25  \n",
+       "629        37.69      93.0         0.0              5.75  \n",
+       "630        64.62      36.0        14.0              3.29  \n",
+       "\n",
+       "[583 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "City_data.dropna()"
+   ]
   },
   {
    "cell_type": "markdown",
